--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         h1
         {
-            color: purple;
+            color: rgb(0, 128, 128);
         }
     </style>
 </head>
