--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body
         {
-            background-color: plum;
+            background-color: rgb(160, 187, 221);
         }
         h1
         {
