--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body
         {
             background-color: plum;
-            font-style: italic;
+            font-family: 'Courier New', Courier, monospace;
         }
         h1
         {
