--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         {
             background-color: plum;
             font-family: 'Courier New', Courier, monospace;
+            font-style: italic;
         }
         h1
         {
